--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
 	},
 	"homepage": "https://github.com/zimonitrome/MemePlatform#readme",
 	"dependencies": {
+		"@google-cloud/storage": "^2.3.1",
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.0",
 		"@types/dotenv": "^6.1.0",
 		"@types/express": "^4.16.0",
+		"@types/google-cloud__storage": "^1.7.2",
 		"@types/jsonwebtoken": "^8.3.0",
 		"@types/multer": "^1.3.7",
 		"@types/node-fetch": "^2.1.4",
 		"@types/uuid": "^3.4.4",
-		"aws-sdk": "^2.373.0",
+		"aws-sdk": "^2.376.0",
 		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
 		"canvas": "^2.2.0",
